# ChangeLog for dev-java/tagsoup
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/tagsoup/ChangeLog,v 1.11 2006/12/09 09:25:49 flameeyes Exp $

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  tagsoup-0.10.2-r1.ebuild:
  Add ~x86-fbsd keyword.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> tagsoup-0.10.2.ebuild,
  tagsoup-0.10.2-r1.ebuild:
  Dropping sparc keywords, see #96229

*tagsoup-0.10.2-r1 (14 Aug 2006)

  14 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +tagsoup-0.10.2-r1.ebuild:
  Migrated to new Java build system.

  09 Jul 2005; Thomas Matthijs <axxo@gentoo.org> tagsoup-0.10.2.ebuild:
  small cleanups

  12 Jun 2005; Jason Wever <weeve@gentoo.org> tagsoup-0.10.2.ebuild:
  Added ~sparc keyword wrt bug #95859.

  28 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> tagsoup-0.10.2.ebuild:
  stable on amd64, ppc and x86. introduced support for the jikes and the source
  useflag

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> tagsoup-0.10.2.ebuild:
  depend on app-arch/unzip

  22 Oct 2004; Dylan Carlson <absinthe@gentoo.org> tagsoup-0.10.2.ebuild:
  Keywords ~amd64.

  18 Oct 2004; David Holm <dholm@gentoo.org> tagsoup-0.10.2.ebuild:
  Added to ~ppc.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> tagsoup-0.10.2.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*tagsoup-0.10.2 (19 Sep 2004)

  19 Sep 2004; Thomas Matthijs <axxo@gentoo.org> +metadata.xml,
  +tagsoup-0.10.2.ebuild:
  initial import, ebuild created by me as a dep
