@@ -2,4 +2,10 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>java</herd>
+	<longdescription>
+		This is the home page of TagSoup, a SAX-compliant parser written
+		in Java that, instead of parsing well-formed or valid XML, parses
+		HTML as it is found in the wild: nasty and brutish, though quite
+		often far from short.
+	</longdescription>
 </pkgmetadata>
