@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/tagsoup
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tagsoup/ChangeLog,v 1.11 2006/12/09 09:25:49 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tagsoup/ChangeLog,v 1.12 2006/12/20 21:11:53 betelgeuse Exp $
+
+  20 Dec 2006; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
+  tagsoup-0.10.2-r1.ebuild:
+  Moved the very long description to metadata.xml and cleaned up the ebuild.
 
   09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
   tagsoup-0.10.2-r1.ebuild:
